--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
-/lazy_ilya/db.db
+/lazy_ilya/db.sqlite3
 /lazy_ilya/work_for_ilia/utils/test_dir/
+/test_dir/
