update some moments

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_PATH='D:\SkillBox\work_task\lazy_ilya'
-TLG_PATH='C:\Users\peopl\Downloads/test_dir'
+BASE_PATH=D:\SkillBox\work_task\lazy_ilya
+TLG_PATH=D:\SkillBox\work_task\lazy_ilya\work_for_ilia\utils\test_dir
