--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ APP_DIR=D:\SkillBox\work_task\lazy_ilya
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=123
+
+DJANGO_USER1=test_user
+DJANGO_USER1_EMAIL=test_user@example.com
+DJANGO_USER1_PASSWORD=12345
+
+DJANGO_USER2=ilia
+DJANGO_USER2_EMAIL=ilia@example.com
+DJANGO_USER2_PASSWORD=12345
