--- a/.env
+++ b/.env
@@ -2,9 +2,15 @@
 #TLG_PATH=D:\SkillBox\work_task\lazy_ilya\work_for_ilia\utils\test_dir
 #APP_DIR=D:\SkillBox\work_task\lazy_ilya
 
-BASE_PATH=/home/user/PycharmProjects/work_task/lazy_ilya
-TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
-APP_DIR=/home/user/PycharmProjects/work_task/lazy_ilya
+#BASE_PATH=/home/user/PycharmProjects/work_task/lazy._ilya
+#TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
+#APP_DIR=/home/user/PycharmProjects/work_task/lazy_ilya
+
+BASE_PATH=/work_task/lazy_ilya
+TLG_PATH=/work_task/lazy_ilya/test_dir
+APP_DIR=/work_task/lazy_ilya
+#
+
 
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
