--- a/.env
+++ b/.env
@@ -1,16 +1,14 @@
-BASE_PATH=D:\SkillBox\work_task\lazy_ilya
-TLG_PATH=D:\SkillBox\work_task\lazy_ilya\work_for_ilia\utils\test_dir
-APP_DIR=D:\SkillBox\work_task\lazy_ilya
+#BASE_PATH=D:\SkillBox\work_task\lazy_ilya
+#TLG_PATH=D:\SkillBox\work_task\lazy_ilya\work_for_ilia\utils\test_dir
+#APP_DIR=D:\SkillBox\work_task\lazy_ilya
 
-#BASE_PATH=/home/user/PycharmProjects/work_task/lazy._ilya
-#TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
+#BASE_PATH=/home/user/PycharmProjects/work_task/lazy_ilya
+TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
 #APP_DIR=/home/user/PycharmProjects/work_task/lazy_ilya
 
 #BASE_PATH=/work_task/lazy_ilya
 #TLG_PATH=/work_task/lazy_ilya/test_dir
 #APP_DIR=/work_task/lazy_ilya
-#
-
 
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
@@ -23,3 +21,6 @@ DJANGO_USER1_PASSWORD=12345
 DJANGO_USER2=ilia
 DJANGO_USER2_EMAIL=ilia@example.com
 DJANGO_USER2_PASSWORD=12345
+
+LOGGER_LEVEL_STDOUT=DEBUG
+LOGGER_LEVEL_FILE=DEBUG
