работаю над авторизацией

--- a/.env
+++ b/.env
@@ -13,14 +13,17 @@ TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=123
+DJANGO_SUPERUSER_PHONE=+79852000338
 
 DJANGO_USER1=test_user
 DJANGO_USER1_EMAIL=test_user@example.com
 DJANGO_USER1_PASSWORD=12345
+DJANGO_USER1_PHONE=+79852000339
 
 DJANGO_USER2=ilia
 DJANGO_USER2_EMAIL=ilia@example.com
 DJANGO_USER2_PASSWORD=12345
+DJANGO_USER2_PHONE=+79852000340
 
 LOGGER_LEVEL_STDOUT=DEBUG
 LOGGER_LEVEL_FILE=DEBUG
