настройка на windows

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #BASE_PATH=D:\SkillBox\work_task\lazy_ilya
-#TLG_PATH=D:\SkillBox\work_task\lazy_ilya\work_for_ilia\utils\test_dir
-#APP_DIR=D:\SkillBox\work_task\lazy_ilya
+TLG_PATH=D:\SkillBox\work_task\test_dir
+APP_DIR=D:\SkillBox\work_task\lazy_ilya
 
 #BASE_PATH=/home/user/PycharmProjects/work_task/lazy_ilya
-TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
+#TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
 #APP_DIR=/home/user/PycharmProjects/work_task/lazy_ilya
 
 #BASE_PATH=/work_task/lazy_ilya
