--- a/lazy_ilya/frontend/package.json
+++ b/lazy_ilya/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
     "vite": "^6.3.1"
   },
   "dependencies": {
@@ -16,5 +19,11 @@
     "flowbite": "^3.1.2",
     "inputmask": "^5.0.9",
     "tailwindcss": "^4.1.5"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "Chrome >= 49",
+    "Firefox >= 45",
+    "ie >= 11"
+  ]
 }
