--- a/.env
+++ b/.env
@@ -27,5 +27,6 @@ DJANGO_USER2_PHONE=+79852000340
 
 LOGGER_LEVEL_STDOUT=DEBUG
 LOGGER_LEVEL_FILE=DEBUG
+LOGGER_ERROR_FILE=DEBUG
 
 ALLOWED_PHONE_NUMBERS=+79852000338,+79852004545,+79852007898
