--- a/lazy_ilya/frontend/package.json
+++ b/lazy_ilya/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "flowbite": "^3.1.2",
     "inputmask": "^5.0.9",
+    "sortablejs": "^1.15.6",
     "tailwindcss": "^4.1.5"
   },
   "browserslist": [
