апдейт кода стикеров

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 #BASE_PATH=D:\SkillBox\work_task\lazy_ilya
-TLG_PATH=D:\SkillBox\work_task\test_dir
-APP_DIR=D:\SkillBox\work_task\lazy_ilya
+#TLG_PATH=D:\SkillBox\work_task\test_dir
+#APP_DIR=D:\SkillBox\work_task\lazy_ilya
 
 #BASE_PATH=/home/user/PycharmProjects/work_task/lazy_ilya
-#TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
-#APP_DIR=/home/user/PycharmProjects/work_task/lazy_ilya
+TLG_PATH=/home/user/PycharmProjects/work_task/test_dir
+APP_DIR=/home/user/PycharmProjects/work_task/lazy_ilya
 
 #BASE_PATH=/work_task/lazy_ilya
 #TLG_PATH=/work_task/lazy_ilya/test_dir
