апдейт кода стикеров пока без мидлваи

--- a/.env
+++ b/.env
@@ -29,4 +29,4 @@ LOGGER_LEVEL_STDOUT=DEBUG
 LOGGER_LEVEL_FILE=DEBUG
 LOGGER_ERROR_FILE=DEBUG
 
-ALLOWED_PHONE_NUMBERS=+79852000338,+79852004545,+79852007898
+ALLOWED_PHONE_NUMBERS=+79852000338,+79852004545,+79852007898,+79854922665
