--- a/lazy_ilya/frontend/package.json
+++ b/lazy_ilya/frontend/package.json
@@ -19,7 +19,8 @@
     "flowbite": "^3.1.2",
     "inputmask": "^5.0.9",
     "sortablejs": "^1.15.6",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "tom-select": "^2.4.3"
   },
   "browserslist": [
     "last 2 versions",
