--- a/lazy_ilya/frontend/package.json
+++ b/lazy_ilya/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "choices.js": "^11.1.0",
     "flowbite": "^3.1.2",
     "inputmask": "^5.0.9",
     "sortablejs": "^1.15.6",
